[package]
name = "ds_raft"
version = "0.1.0"
authors = ["Ayoub Nasr <ayoub.nasr.work@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { git = "https://github.com/bsteinb/rsmpi", rev = "f9aec8b8d82" }
rand = "0.7.2"
serde = {version="1.0.104", features= ["derive"]}
serde_json = "1.0.44"
threadpool = "1.7.1"
log = "0.4"
env_logger = "0.7.1"
ctrlc = "3.1.3"